| Bug #40136 | Group by is ignored when join buffer is used for an outer join | ||
|---|---|---|---|
| Submitted: | 19 Oct 2008 4:33 | Modified: | 22 Nov 2010 1:30 |
| Reporter: | Igor Babaev | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Optimizer | Severity: | S3 (Non-critical) |
| Version: | 6.0-BKA | OS: | Any |
| Assigned to: | Sergey Petrunya | CPU Architecture: | Any |
[19 Oct 2008 4:33]
Igor Babaev
[19 Oct 2008 20:00]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/56552 2659 Sergey Petrunia 2008-10-16 BUG#40136: Group by is ignored when join buffer is used for an outer join - Fix a typo bug in make_join_orderinfo().
[20 Oct 2008 8:25]
Sergey Petrunya
Pushed into mysql-6.0-bka-preview tree
[14 Dec 2008 11:07]
Bugs System
Pushed into 6.0.8-alpha (revid:sergefp@mysql.com-20081016111957-2mjerpagh1wtm8q7) (version source revid:sergefp@mysql.com-20081016111957-2mjerpagh1wtm8q7) (pib:5)
[16 Aug 2010 6:37]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100816062819-bluwgdq8q4xysmlg) (version source revid:alik@sun.com-20100816062612-enatdwnv809iw3s9) (pib:20)
[13 Nov 2010 16:18]
Bugs System
Pushed into mysql-trunk 5.6.99-m5 (revid:alexander.nozdrin@oracle.com-20101113155825-czmva9kg4n31anmu) (version source revid:vasil.dimov@oracle.com-20100629074804-359l9m9gniauxr94) (merge vers: 5.6.99-m4) (pib:21)
[22 Nov 2010 1:30]
Paul DuBois
Bug is not in any released 5.6.x version. No changelog entry needed.
