BUG#40136: Group by is ignored when join buffer is used for an outer join - Fix a typo bug in make_join_orderinfo().